<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.ui.fragments.InstructionsFragment">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical|center_horizontal"
           >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/darkblue"
                android:text="@string/Title_instrction"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="330dp"
            app:fontFamily="@font/calibri"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
          >


            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                 android:textSize="15dp"
                android:text="@string/instructions"
                android:textColor="@color/lightblue" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/style_answer"
                android:text="@string/answera"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/style_answer"
                android:text="@string/answerb"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/style_answer"
                android:text="@string/answerc"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/style_answer"
                android:text="@string/answerd"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/style_answer"
                android:text="@string/answere"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/lightblue"
                android:layout_marginTop="20dp"
                android:text="@string/terms"
                style="@style/style_answer"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            >

            <com.skydoves.elasticviews.ElasticButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_drawable"
                android:text="@string/Title_proceed"
                android:textStyle="italic"
                android:id="@+id/btn_proceed"
                android:layout_marginTop="30dp"
                android:textColor="@color/darkblue"
                android:textSize="17sp"

              />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
</ScrollView>