<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.LoginScreen">
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/smalllogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.1"
            android:text="@string/Logoname_part1"
            android:textColor="@color/darkblue"
            android:textSize="25dp" />
<!--        android:src="@drawable/logo3g"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.1"
            android:text="@string/Logoname_part2"
            android:textColor="@color/lightblue"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="350dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/Title_username"
            android:textColor="@color/lightblue"
            android:gravity="left"
            android:textSize="15dp"
            android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/editext_drawable"
                android:textColor="@color/lightblue" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/Title_Password"
            android:gravity="left"
            android:textSize="15dp"
            android:textColor="@color/lightblue"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_drawable"
            android:inputType="textPassword"
            android:textColor="@color/whiteLogocolor" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title_remember"
                android:buttonTint="@color/lightblue"
                android:textColor="@color/lightblue"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/lightblue"
                android:text="@string/Title_fgt_pwd"
                android:layout_weight="1"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"

                android:id="@+id/btn_login"
                android:textColor="@color/whiteLogocolor"
                android:background="@drawable/button_filleddrawable"
                android:text="@string/Login"/>
        </LinearLayout>


<!--        <LinearLayout-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="fill_parent"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:orientation="horizontal">-->

<!--            <ImageView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="20dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layerType="software"-->
<!--                android:src="@drawable/dotted_line" />-->

<!--        </LinearLayout>-->



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title_facebook"
               android:background="@drawable/button_fb"
                android:textColor="@color/whiteLogocolor"
                android:layout_weight="1"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:textColor="@color/whiteLogocolor"
                android:background="@drawable/button_google"
                android:text="@string/Title_google"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>