<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/qa_layout"
    tools:context=".activities.ui.fragments.QuestionAnswerFragment">
    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="left"-->
<!--            android:layout_weight="0.2">-->
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                android:textSize="20dp"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/lightblue"-->
<!--                android:text="@string/Title_Qno"/>-->
<!--        </LinearLayout>-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
           >
            <LinearLayout
                android:layout_width="330dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
               >
            <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:textColor="@color/darkblue"
                            android:text="@string/Title_Qno"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="5dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:id="@+id/txtQno"
                android:textColor="@color/darkblue"
               />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="17dp"
                android:typeface="serif"
                android:id="@+id/txtQuestion"
                android:textColor="@color/darkblue"
                android:textStyle="bold"
                />
            <Button
                style="@style/style_answer_button"
                android:id="@+id/answera"
                android:text="@string/answera"/>
            <Button
                style="@style/style_answer_button"
                android:id="@+id/answerb"
                android:text="@string/answerb"/>
            <Button
                style="@style/style_answer_button"
                android:id="@+id/answerc"
                android:text="@string/answerc"/>
            <Button
                style="@style/style_answer_button"
                android:id="@+id/answerd"
                android:text="@string/answerd"/>
            <Button
                style="@style/style_answer_button"
                android:id="@+id/answere"
                android:text="@string/answere"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal|center_vertical"
         >

<!--            <com.skydoves.elasticviews.ElasticButton-->
<!--                android:id="@+id/btn_next"-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal|center_vertical"-->
<!--                android:background="@drawable/button_drawable"-->
<!--                android:text="@string/Title_next"-->
<!--                android:textColor="@color/darkblue" />-->
        </LinearLayout>

    </LinearLayout>



</FrameLayout>